--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -35,6 +35,15 @@
         "Transforms": [
           { "PathPattern": "{**catch-all}" }
         ]
+      },
+      "grpcservice4": {
+        "ClusterId": "grpcservice4",
+        "Match": {
+          "Path": "/service4/{**catch-all}"
+        },
+        "Transforms": [
+          { "PathPattern": "{**catch-all}" }
+        ]
       }
     },
     "Clusters": {
@@ -68,6 +77,17 @@
         "Destinations": {
           "destination1": {
             "Address": "https://localhost:8003"
+          }
+        }
+      },
+      "grpcservice4": {
+        "HttpRequest": {
+          "Version": "2",
+          "VersionPolicy": "RequestVersionExact"
+        },
+        "Destinations": {
+          "destination1": {
+            "Address": "https://localhost:8004"
           }
         }
       }
