--- a/GrpcClient/GrpcClient.csproj
+++ b/GrpcClient/GrpcClient.csproj
@@ -13,6 +13,11 @@
 
     <ItemGroup>
       <PackageReference Include="Grpc.AspNetCore" Version="2.60.0" />
+      <PackageReference Include="MagicOnion.Client" Version="6.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\MagicOnionService.Shared\MagicOnionService.Shared.csproj" />
     </ItemGroup>
     <ItemGroup>
         <Protobuf Include="Service1\greet.proto" GrpcServices="Client" />
